--- a/sass/page/_np.scss
+++ b/sass/page/_np.scss
@@ -1,54 +1,53 @@
 // 自動產生編號：https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Lists_and_Counters/Using_CSS_counters
 .np {
-    ul, ol {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: space-around;
+    ul,ol {
+        overflow:hidden;
+        padding:1em 0;
         margin: 0;
-        padding: 1em 0;
-        list-style-type: none;
+        overflow:hidden;
     }
     li {
-        flex: 1 1 48%;
-        margin-bottom: 10px;
-        border-radius: 5px;
-       
-        &:nth-child(odd) {
-            margin-right:10px;
+        display: block;
+        width: 49%;
+        margin: 0 1% 10px 0;
+        float: left;
+        @include box-sizing(border-box);
+        &:nth-child(even) {
+        	width: 50%;
+            margin-right: 0px;
         }
-        
         @include screen('mobile') {
-            flex: 1 1 100%;
-            &:nth-child(odd) {
-                margin-right: 0;
+            float:none;
+            width: 96%;
+            margin:0px auto 10px;
+            &:nth-child(even){
+                width: 96%;
+                margin-right: auto;
             }
         }
         a {
-            border-radius: 4px;
+            border-radius:4px;
             border: 2px solid #DDD;
-            padding: 1em 1em 1em 2.5em;
+            padding: 1em 1em 1em 2em;
             display: block;
             vertical-align: top;
-            position: relative;
-            height: 100%;  
-            @include box-sizing;
+            @include text-overflow;
+            position:relative;
             @include aSetting_nocolor;
-            // @include text-overflow;
-            .num {
+            .num{
                 position: absolute;
-                width: 1em;
+                width:1em;
                 top: 1em;
                 left: .5em;
                 text-align: right;
-                &:after {
-                    content: ".";
+                &:after{
+                    content:".";
+                    display:inline-block;
                 }
             }
             &:hover,
             &:focus {
-               border: 2px solid $primaryColor;
-                color: $primaryColor;
+                border: 2px solid $primaryColor;
             }
         }
     }
