--- a/sass/sass/_category.scss
+++ b/sass/sass/_category.scss
@@ -4,11 +4,10 @@
     margin: 1em auto;
     ul {
         @include li-reset;
-        display:flex;
-        flex-direction: row;
-        flex-wrap:wrap;
         li {
-            margin:0 5px 5px 0;
+            margin: 0px 3px 3px 0px;
+            display: block;
+            float: left;
         }
     }
     a {
