--- a/sass/sass/_mixin.scss
+++ b/sass/sass/_mixin.scss
@@ -11,6 +11,7 @@
 @import "mixins/_box-shadow"; 			//陰影
 @import "mixins/_li-reset"; 			//清除li格式
 @import "mixins/_bootstrap-grid"; 		//格線系統
+@import "mixins/_flex-set"; 		    //flex格線系統
 // @import "mixins/_make-column"; 		//原生bs格線系統(沒有必要用不用匯入)
 // 客製化
 @import "mixins/_extend"; 				//客製化繼承
