--- a/sass/sass/mixins/_extend.scss
+++ b/sass/sass/mixins/_extend.scss
@@ -36,3 +36,15 @@
     border-width: 3px 6px 3px 0;
     border-color: transparent #555 transparent transparent;
 }
+
+// 啟動display:flex
+%flex_setting{
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    
+    // 預設均分
+    justify-content: space-between;
+}
